Login apariencia implementada

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#ffffff</color>
     <color name="black">#000</color>
     <color name="green">#0d0</color>
+    <color name="grey">#888</color>
 </resources>
