--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,23 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/colorPrimary"
     tools:context=".SplashScreen">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BIENBENIDO"
-        android:textSize="30dp"
-        android:textAlignment="center" />
 
     <ImageView
         android:id="@+id/logoOpening"
+        android:transitionName="transitionImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/icon_gamer"
         android:textAlignment="center"/>
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <ProgressBar
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
