--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -11,13 +11,13 @@
     tools:context=".ui.fragment.SingInFragment">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/siInputEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColorHint="@color/grey">
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/siInputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_mail_black_24dp"
@@ -29,14 +29,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/siInputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:passwordToggleEnabled="true"
         app:errorEnabled="true"
-        android:textColorHint="@color/grey">
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/siInputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_enhanced_encryption_black_24dp"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:text="Olvido su contraseña?"
             android:layout_gravity="end"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             android:textSize="17sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -64,6 +64,8 @@
         android:layout_marginHorizontal="80dp"
         android:textSize="22sp"
         android:padding="15dp"
+        android:textColor="@color/white"
+        android:background="@color/orangeBlack"
         android:text="Ingresar" />
 
 </LinearLayout>
