--- a/app/src/main/res/layout/fragment_sing_up.xml
+++ b/app/src/main/res/layout/fragment_sing_up.xml
@@ -12,13 +12,13 @@
     tools:context=".ui.fragment.SingUpFragment">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/suInputRegName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColorHint="@color/grey">
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/suInputRegName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -27,13 +27,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/suInputRegEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColorHint="@color/grey">
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/suInputRegEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -43,17 +43,18 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/suInputPassword"
-        app:passwordToggleEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
-        android:textColorHint="@color/grey">
+        app:passwordToggleEnabled="true"
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/suInputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:inputType="textPassword"
             android:hint="Contraseña"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -65,6 +66,8 @@
         android:layout_marginHorizontal="80dp"
         android:padding="15dp"
         android:textSize="22sp"
+        android:textColor="@color/white"
+        android:background="@color/orangeBlack"
         android:text="Registrar"/>
 
 </LinearLayout>
