migrando a AndroidX y avanzando panel del juego

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="green">#0d0</color>
     <color name="grey">#888</color>
     <color name="orangeBlack">#C8840D</color>
+    <color name="yellow">#FFEB3B</color>
     <color name="yellowBlack">#CB604126</color>
 </resources>
