--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,13 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
+    <color name="red">#ff0000</color>
+    <color name="yellow">#FFEB3B</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#ffffff</color>
     <color name="black">#000</color>
     <color name="green">#0d0</color>
     <color name="grey">#888</color>
     <color name="orangeBlack">#C8840D</color>
-    <color name="yellow">#FFEB3B</color>
     <color name="yellowBlack">#CB604126</color>
 </resources>
