--- a/app/src/main/res/menu/menu_sing.xml
+++ b/app/src/main/res/menu/menu_sing.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/btnSingIn"
-        android:title="SING IN" />
+    <item android:id="@+id/menuProfile"
+        android:title="Perfil"
+        android:icon="@drawable/ic_person_black_24dp"
+        app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/btnSingUp"
-        android:title="SING UP" />
+    <item android:id="@+id/menuSetting"
+        android:title="Configuración"
+        android:icon="@drawable/ic_settings_black_24dp"
+        app:showAsAction="ifRoom"/>
 
 </menu>
