--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="red">#ff0000</color>
     <color name="yellow">#FFEB3B</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#07D100</color>
     <color name="white">#ffffff</color>
     <color name="black">#000</color>
     <color name="green">#0d0</color>
